# DAB-Orchestration-of-DLT

./: .gitignore  README.md  databricks.yml  pyproject.toml  pytest.ini
pipelines/: main_pipeline.py
resources/: taxi_data_pipeline.pipeline.yml
src/taxi_dlt_pkg/: __init__.py  ddl.py  incremental.py  ingestion.py  sql_transforms.py  transforms.py  writes.py
tests/: conftest.py  test_ddl.py  test_ingestion.py  test_ingestion_local.py  test_transforms.py  test_writes.py
